--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
         <div class="card" onclick="selectItem(100, 230)">
             <div class="stars-icon">⭐️⭐️</div>
             <div class="amount">100 Stars</div>
-            <div class="price">230 ₽</div>
+            <div class="price">80₴</div>
         </div>
 
         <div class="card" onclick="selectItem(500, 1100)">
             <div class="stars-icon">🌟</div>
             <div class="amount">500 Stars</div>
-            <div class="price">1100 ₽</div>
+            <div class="price">390₴</div>
         </div>
 
         <div class="card" onclick="selectItem(1000, 2100)">
             <div class="stars-icon">💎</div>
-            <div class="amount">1000 Stars</div>
-            <div class="price">2100 ₽</div>
+            <div class="amount">100 Stars</div>
+            <div class="price">750₴</div>
         </div>
     </div>
 
@@ -115,4 +115,5 @@
         }
     </script>
 </body>
+
 </html>
